--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
-<html>
-    <head>
-        <titlte>
-            olá, eu sou a cabeça
-        </titlte>
-    </head>
-    <body>
-       <h1>h1 Eu sou o corpo</h1>
-       <h2>h2 Eu sou o corpo</h2>
-    </boby>
-    <ol>
-        <li>cafe</li>
-        <li>cha</li>
-        <li>leite</li>
-    </ol>
-    <ul>
-        <li>cafe</li>
-        <li>cha</li>
-        <li>leite</li>
-    </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ruthiane Almeida Cv</title>
+
+     <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-secion-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
+                    <p class"name">Ruthiane Almeida</p>
+                    <p class="profession">Software Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    </ul>
+                          <li></i> class="fa fa-phone"></i>+55 11 99999-1111</li>
+                          <li></i> class="fa fa-envelope"></i>danilsantos@gmail.com</li>
+                          <li></i> class="fa fa-globe"></i>www.daniel.com</li>
+                          <li></i> class="fa fa-github"></i>ruthianealmeida</li>
+                    </ul>      
+                </div>    
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git & GitHub</p></li>
+                        <li><p>Linux</p></li>
+                    </ul>
+                </div>
+            </section>
+            <sevtion class="right-section">
+                <div class"right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title">Sobre Mim</div>
+                        <p class="about-me-contents">
+                            Olá sou a Ruthiane.<br>
+                            <br> Um pouco mais sobre o que faço
+                            <br> Quais são minhas competências
+                        </p>
+                    </section>
+                </div>
+            </sevtion>
+        </section>
+    </main>
+</body>
 </html>
