--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruthiane Almeida Cv</title>
 
-     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="resume-contents">
+     <main class="resume-contents">
         <section class="left-section">
-            <section class="left-secion-content">
-                <div class="profile">
+            <section class="left-section-content">
+                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
-                    <p class"name">Ruthiane Almeida</p>
+                    <p class="name">Ruthiane Almeida</p>
                     <p class="profession">Software Engineer</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     </ul>
-                          <li></i> class="fa fa-phone"></i>+55 11 99999-1111</li>
-                          <li></i> class="fa fa-envelope"></i>danilsantos@gmail.com</li>
-                          <li></i> class="fa fa-globe"></i>www.daniel.com</li>
-                          <li></i> class="fa fa-github"></i>ruthianealmeida</li>
+                          <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
+                          <li><i class="fa fa-envelope"></i>danilsantos@gmail.com</li>
+                          <li><i class="fa fa-globe"></i>www.daniel.com</li>
+                          <li><i class="fa fa-github"></i>ruthianealmeida</li>
                     </ul>      
                 </div>    
                 <div class="skills">
@@ -34,8 +33,9 @@
                     </ul>
                 </div>
             </section>
-            <sevtion class="right-section">
-                <div class"right-section-contents">
+        </section>            
+        <section class="right-section">
+                <div class="right-section-contents">
                     <section class="about gap">
                         <div class="right-title">Sobre Mim</div>
                         <p class="about-me-contents">
@@ -45,8 +45,48 @@
                         </p>
                     </section>
                 </div>
-            </sevtion>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui principais atividades
+                        </p>
+                    </div> 
+                </div>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-scool-name">PUC</p>
+                        <p class="education-time-period">2021~2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós graduação em engenharia de software
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-scool-name">UECE</p>
+                        <p class="education-time-period">2021~2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós graduação em engenharia de software
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
+
 </html>
